# logistics-eta-prediction

./: .gitignore  README.md  pyproject.toml
data/: test.csv
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  03_model_training.ipynb
